TEST_PROGRAMS/INVALID/15/weeding5.go
package error

func f(){
    x := 1
    switch x{
    default: print("first")
    default: print("second")
    }
}
